Feat : 유효성 검사 추가 및 리팩토링